--- a/src/main/resources/static/templates/header.html
+++ b/src/main/resources/static/templates/header.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Spring Music Demo for the PETE team<span class="glyphicon glyphicon-music"></span></a>
+                <a class="navbar-brand" href="#">Spring Music Demo for the PETE team (afternoon)<span class="glyphicon glyphicon-music"></span></a>
                 <ul class="navbar-nav">
                     <!--<li></li>-->
                 </ul>
